--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
-.wrapper {
+* {
+	margin: 0;
+	padding: 0;
+}
+
+.grid {
 	display: grid;
-	grid-template-columns: 70% 30%;
-	/* grid-column-gap: 1em;
-	grid-row-gap: 1em; */
-	grid-gap: 1em;
+	grid-template-columns: 1fr 1fr;
 }
 
-.wrapper > div {
-	background: #eee;
-	padding: 1em;
+.grid div:nth-child(even) {
+	background-color: red;
 }
 
-.wrapper > div:nth-child(odd) {
-	background: #ddd;
+.grid div:nth-child(odd) {
+	background-color: green;
 }
