--- a/Wes-Bos-CSSGrid/05-ImplicitExplicit/style.css
+++ b/Wes-Bos-CSSGrid/05-ImplicitExplicit/style.css
@@ -71,16 +71,10 @@ h6 {
 .container {
 	display: grid;
 	grid-gap: 20px;
-	/* columns, explicit */
-	/* rows, implicit */
-	/* the browser wraps because there are more items to place, but we explicitly set only 2 columns */
-	grid-template-columns: 200px 400px;
-	grid-template-rows: 50px 100px;
+	grid-template-columns: 400px 200px;
+	/* grid-auto-flow will determine whether the extra will be placed horizontally or vertically, column or row */
+	grid-auto-flow: column;
 
-	/* when we add extra items after explicit column and row, implicit rows are added by the browser, we can handle this sizing with grid-auto-rows/columns */
-
-	/* in the below code, the first extra (implicit) row is 200px height, the second is 500px  */
-	grid-auto-rows: 200px 500px;
-
-	/* grid-auto-columns is used with grid-auto-flow */
+	/* any columns that have been implictly created will be 200px */
+	grid-auto-columns: 200px;
 }
