--- a/Wes-Bos-CSSGrid/05-ImplicitExplicit/style.css
+++ b/Wes-Bos-CSSGrid/05-ImplicitExplicit/style.css
@@ -70,22 +70,13 @@ h6 {
 
 .container {
 	display: grid;
-	height: 600px;
 	grid-gap: 20px;
-	border: 10px solid var(--yellow);
-	/* when using perecentages, padding is not taken into account */
-	/* grid-template-columns: 25% 25% 25% 25%; */
-
-	/* however, with fractions, it is */
-	/* fractions represent THE AMOUNT OF SPACE LEFT AFTER LAYOUT IS COMPLETE */
-	/* similarly to flex-grow, it can be used be used as a multiplier */
-	/* grid-template-columns: 200px 2fr 1fr; */
+	/* repeat takes two args, number of repeats, the command to repeat */
 	/* grid-template-columns: repeat(4, 1fr); */
 
-	/* when we add a height to our container, this works */
-	/* grid-template-rows: 1fr 10fr 1fr 1fr; */
+	/* alternating between 1fr and 2fr, 4 times */
+	grid-template-columns: repeat(4, 1fr 2fr);
 
-	/* auto, as a sizing keyword for our grids, adjust to the max size needed by the content */
-	/* note how the widest element in a column decides the width of those columns */
-	grid-template-columns: auto 1fr auto 1fr;
+	/* you can also nest the repeat() */
+	grid-template-columns: 100px repeat(2, 1fr auto) 200px;
 }
