--- a/Wes-Bos-CSSGrid/05-ImplicitExplicit/style.css
+++ b/Wes-Bos-CSSGrid/05-ImplicitExplicit/style.css
@@ -71,30 +71,16 @@ h6 {
 .container {
 	display: grid;
 	grid-gap: 20px;
-	grid-template-columns: repeat(5, 1fr);
-	grid-template-rows: repeat(5, 1fr);
+	border: 10px solid var(--yellow);
+
+	/* auto-fill tells the browser to figure out how many columns will fit with the given size */
+
+	grid-template-columns: repeat(auto-fill, 150px);
+
+	grid-template-columns: repeat(auto-fit, 150px);
 }
 
-.item-poop {
-	/* grid-column: span 2; */
-	/* grid-column is shorthand for grid-column-start, grid-column-auto */
-
-	/* grid-column-start: 2; */
-	/* grid-column-end: 5; */
-
-	/* grid-column: 2 / 5; */
-	/* grid-column: span 2 / 5; */
-
-	/* we can also set a start position and span length */
-	/* grid-column: 1 / span 2; */
-
-	/* don't know how many tracks you have? -1 can be used to target the last */
-	/* 1 / -1 can be used to span the entire width */
-	grid-column: 1 / span 3;
-	/* grid-row: 3 / span 3; */
-
-	grid-row: 1 / -1;
-
-
-	background: #BADA55;
+.item4 {
+	/* notice the difference in position when using auto-fill vs. auto-fit */
+	grid-column-end: -1;
 }
