--- a/Wes-Bos-CSSGrid/05-ImplicitExplicit/style.css
+++ b/Wes-Bos-CSSGrid/05-ImplicitExplicit/style.css
@@ -71,17 +71,40 @@ h6 {
 .container {
 	display: grid;
 	grid-gap: 20px;
-	border: 10px solid var(--yellow);
+	grid-template-columns: 1fr 10fr 1fr;
+	grid-template-rows: 150px 150px 150px;
 
-	/* autofill/autofit and minmax can be used to help create responsive sites in a similar manner to media queries */
-	/* instead of setting hard values, we can set the minimum/maximum size our cols/rows can use when resizing*/
-	/* grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); */
+	/* setting up grid areas */
+	/* using a . instead of the explicit area name creates a blank space */
+	grid-template-areas:
+	"sidebar-1 content sidebar-2"
+	"sidebar-1 content sidebar-2"
+	"footer footer footer"
+}
 
-	/* autofit allows our elements to take up the total space of our grid container as we resize, in the example below */
-	/* grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); */
+.item1 {
+	grid-area: sidebar-1;
+}
 
-	/* fit function */
-	/* fit-content has a clamp value, the max value it will be sized to during resizing */
-	grid-template-columns: fit-content(100px) 150px 150px 150px;
+.item2 {
+	grid-area: content;
+}
 
+.item3 {
+	grid-area: sidebar-2;
+}
+
+.footer {
+	/* assigning to the grid area */
+	grid-area: footer;
+}
+
+/* template areas with media queries */
+@media (max-width: 700px) {
+	.container {
+		grid-template-areas:
+		"content content content"
+		"sidebar-1 sidebar-1 sidebar-2"
+		"footer footer footer"
+	}
 }
