--- a/Wes-Bos-CSSGrid/Grid-Image-Gallery/style.css
+++ b/Wes-Bos-CSSGrid/Grid-Image-Gallery/style.css
@@ -23,8 +23,9 @@ p {
 
 .close {
 	background: none;
-	color: white;
+	color: black;
 	border: 0;
+	padding-bottom: 10px;
 }
 
 .gallery {
@@ -118,10 +119,12 @@ p {
 
 .overlay.open {
 	display: grid;
+	align-items: center;
+	justify-items: center;
 }
 
-.overlay figure {
-	background: white;
+.overlay-inner {
+	background: rgba(255, 255, 255, 0.7);
 	width: 700px;
 	padding: 20px;
 }
