--- a/Wes-Bos-CSSGrid/Grid-Responsive-Site/responsive-START.css
+++ b/Wes-Bos-CSSGrid/Grid-Responsive-Site/responsive-START.css
@@ -167,3 +167,65 @@ img {
 .gallery img {
 	width: 100%;
 }
+
+
+/* MEDIA QUERIES */
+@media (max-width: 1000px) {
+	.menu {
+		/* puts menu above wrapper, which has an implicit order of 0 */
+		order: -1;
+		perspective: 800;
+	}
+
+	[aria-controls="menu-list"] {
+		display: block;
+		margin-bottom: 10px;
+	}
+
+	.menu ul {
+		max-height: 0;
+		/* fix for visible menu after transform in certain browsers */
+		overflow: hidden;
+		transform: rotateX(90deg);
+		transition: all 0.5s;
+	}
+	/* ~ means whatever ul appears as a sibling when this meu is expanded */
+	[aria-expanded="true"] ~ ul {
+		display: grid;
+		max-height: 500px;
+		transform: rotateX(0);
+	}
+
+	[aria-expanded="false"] .close {
+		display: none;
+	}
+
+	[aria-expanded="true"] .close {
+		display: inline-block;
+	}
+
+	[aria-expanded="true"] .open {
+		display: none;
+	}
+}
+
+@media (max-width: 700px) {
+	.top {
+		grid-template-areas:
+		"hero hero"
+		"cta1 cta2"
+	}
+
+	.about {
+		grid-template-columns: 1fr;
+	}
+}
+
+@media (max-width: 500px) {
+	.top {
+		grid-template-areas:
+		"hero"
+		"cta1"
+		"cta2"
+	}
+}
